# data-science

./: .gitattributes  .gitignore  README.md  convert.py  data_preprocessing.ipynb  data_preprocessing_early.ipynb  data_preprocessing_mid.ipynb  eda_and_feature.ipynb  eda_and_feature_early.ipynb  eda_and_feature_mid.ipynb  image.ipynb  pyproject.toml  statistics.ipynb  stockfish.ipynb
data/: chess_games_feature_60_sf.csv  chess_games_raw.csv
models/: baseline.ipynb  decision_tree.ipynb  decision_tree_early.ipynb  decision_tree_early_sf.ipynb  logistic_regression.ipynb  logistic_regression_early.ipynb  logistic_regression_early_sf.ipynb  neural_network.ipynb  neural_network_early.ipynb  neural_network_early_sf.ipynb  random_forest.ipynb  random_forest_early.ipynb  random_forest_early_sf.ipynb  xgboost.ipynb  xgboost_early.ipynb  xgboost_early_sf.ipynb
models/early_moves/: decision_tree_early.ipynb  logistic_regression_early.ipynb  neural_network_early.ipynb  random_forest_early.ipynb  xgboost_early.ipynb
models/early_moves_stockfish/: decision_tree_early_sf.ipynb  logistic_regression_early_sf.ipynb  random_forest_early_sf.ipynb  xgboost_early_sf.ipynb
models/full_game/: decision_tree_full.ipynb  logistic_regression_full.ipynb  neural_network_full.ipynb  random_forest_full.ipynb  xgboost_full.ipynb
models/pregame/: decision_tree.ipynb  logistic_regression.ipynb  random_forest.ipynb
notebooks/: statistics.ipynb
notebooks/02_preprocessing/: pregame_preprocessing.ipynb
notebooks/03_eda_features/: pregame_eda_features.ipynb
