[project]
name = "data-science"
version = "0.1.0"
description = "Fundamentals of Data Science final project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-chess>=1.999",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
